Se ha creado el modelo y se ha modificado la estructura el servicio para indicar el tipo de dato

--- a/Frontend/concretoCalculadora/src/app/concreto-listado/concreto-listado.component.html
+++ b/Frontend/concretoCalculadora/src/app/concreto-listado/concreto-listado.component.html
@@ -26,7 +26,7 @@
       </tr>
     </thead>
     <tbody>
-      @for(concreto of concreto; track concreto.id){
+      @for(concreto of concreto; track concreto)  {
       <tr>
         <td scope="row">{{ concreto.idConcreto }}</td>
         <td>{{ concreto.nombreObra }}</td>
