--- a/Frontend/concretoCalculadora/src/app/concreto-listado/concreto-listado.component.html
+++ b/Frontend/concretoCalculadora/src/app/concreto-listado/concreto-listado.component.html
@@ -1,16 +1,13 @@
 <div class="container py-3">
-
-
-
-
   <div class="container text-center" style="margin: 30px">
     <h3>Calculadora Concreto</h3>
   </div>
 
-
-<div class="text-end">
-  <button class="btn btn-primary" routerLink="/nuevo">Nuevo Registro Concreto</button>
-</div>
+  <div class="text-end">
+    <button class="btn btn-primary" routerLink="/nuevo">
+      Nuevo Registro Concreto
+    </button>
+  </div>
 
   <table class="table table-striped table-hover align-middle">
     <thead class="table-dark">
@@ -26,7 +23,7 @@
       </tr>
     </thead>
     <tbody>
-      @for(concreto of concreto; track concreto)  {
+      @for(concreto of concreto; track concreto) {
       <tr>
         <td scope="row">{{ concreto.idConcreto }}</td>
         <td>{{ concreto.nombreObra }}</td>
@@ -35,6 +32,12 @@
         <td>{{ concreto.grosor }}</td>
         <td>{{ concreto.calculoConcreto }}</td>
         <td>{{ concreto.fechaCreacion | date : "dd/MM/yyyy hh:mm a" }}</td>
+        <td>
+          <div class="btn-group">
+            <button class="btn btn-warning">Editar</button>
+            <button class="btn btn-danger">Eliminar</button>
+          </div>
+        </td>
       </tr>
       }
     </tbody>
